add well-designed template with bootstrap framework

--- a/public/css/_custom.css
+++ b/public/css/_custom.css
@@ -1,5 +1,5 @@
 body {
-	font-family: "Helvetica Neue", Ariel, Helvetica, sans-serif;
+	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 article {
