--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
-<% settings.articles.each do |article| %>
-	<%= erb :post, :locals => {:article => article} %>
+<% @books.each_with_index do |book, id| %>
+    <p>
+        <h2> <a href="book/<%= id %>"><%= book %></a></h2>
+    </p>
 <% end %>
